<resources>
    <string name="app_name">Improved Initiative</string>
    <string name="combat_name">Improved Initiative</string>
    <string name="edit_character_name">Create a new Character</string>
    <string name="choose_character_name">Manage Characters</string>
    <string name="instructions">Instructions</string>
    <string name="show_instructions">Show Instructions</string>

    <!--Main Screen-->
    <string name="start_combat">Start Combat</string>
    <string name="edit_characters">Edit Characters</string>
    <string name="about">About</string>
    <string name="about_label">About Improved Initiative</string>
    <string name="about_text">
        Improved Initiative is a free open source initiative manager. If you\'ve found a bug, please report it to https://github.com/chowes/improved-initiative/issues
    </string>
    <string name="acknowledgements_label">Acknowledgements</string>
    <string name="acknowledgements_text">
        The Improved Initiative logo is based on a free font called Barbarian NS created by Anthony Robinson.
        The quill \'save\' icon was created by Freepik from flaticon.com
    </string>
    <string name="thanks_label">Thanks for using Improved Initiative!</string>

    <!--Buttons-->
    <string name="okay">Okay</string>
    <string name="dismiss">Don\'t Show Again</string>
    <string name="report_bug">Report a Bug</string>
    <string name="increment_health">Increment Health</string>
    <string name="decrement_health">Decrement Health</string>

    <!--Combat Screen-->
    <string name="next_round">Next Turn</string>
    <string name="replay_round">Replay Turn</string>
    <string name="add_character">Characters</string>
    <string name="delay_turn">Delay Turn</string>
    <string name="combat_tutorial_pref">show_combat_instructions</string>
    <string name="combat_tutorial_swipe_left_label">Swipe left:</string>
    <string name="combat_tutorial_swipe_left_text">Remove character from combat</string>
    <string name="combat_tutorial_swipe_right_label">Swipe right:</string>
    <string name="combat_tutorial_swipe_right_text">Delay an action or take a delayed action</string>
    <string name="combat_tutorial_drag_label">Drag:</string>
    <string name="combat_tutorial_drag_text">Reorder initiative</string>
    <string name="combat_tutorial_roll_initiative_label">Roll Initiative:</string>
    <string name="combat_tutorial_roll_initiative_text">Press the die in the top menu to re-roll initiative for all characters</string>

    <!--Character Item-->
    <string name="char_hp">HP: %1$d/%2$d</string>
    <string name="char_init_bonus">Bonus: %d</string>
    <string name="char_init_score">Score: %d</string>
    <string name="char_initiative">Initiative:</string>

    <!--Character Manager-->

    <!--Edit Character-->
    <string name="edit_title">Edit Character</string>
    <string name="create_character">Create Character</string>
    <string name="edit_name">Name:</string>
    <string name="edit_hp">HP: </string>
    <string name="edit_hp_max">Max</string>
    <string name="edit_hp_current">Current</string>
    <string name="edit_colour">Colour: </string>
    <string name="edit_initiative">Initiative:</string>
    <string name="edit_init_bonus">Bonus:</string>
    <string name="edit_init_score">Score:</string>
    <string name="edit_conditions">Condition:</string>
    <string name="edit_in_combat">In Combat:</string>
    <string name="slash">/</string>
    <string name="roll_initiative">Roll Initiative</string>
    <string name="resume_encounter">Resume Combat</string>
    <string name="new_encounter">New Encounter</string>
    <string name="save_character">Save Character</string>
    <string name="character_tutorial_pref">show_char_instructions</string>
    <string name="character_tutorial_swipe_left_label">Swipe left:</string>
    <string name="character_tutorial_swipe_left_text">Delete a character</string>
    <string name="character_tutorial_swipe_right_label">Swipe right:</string>
    <string name="character_tutorial_swipe_right_text">Edit a character</string>
    <string name="character_tutorial_click_label">Click:</string>
    <string name="character_tutorial_click_text">Add character to combat</string>

    <string-array name="color_array">
        <item>Red</item>
        <item>Blue</item>
        <item>Green</item>
        <item>Yellow</item>
        <item>Black</item>
    </string-array>
    <string name="colour_img">Colour</string>

    <!--Testing-->
    <string name="test_name">Beatrix the Bold</string>
</resources>
