<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="16dp"
    android:paddingBottom="24dp" >

    <ImageView
        android:id="@+id/iv_color_select"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingTop="8dp"
        app:layout_constraintLeft_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="parent" />

    <TextView
        android:id="@+id/tv_name_select"
        style="@style/TextAppearance.AppCompat.Title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="24sp"
        android:layout_marginLeft="4dp"
        android:layout_marginStart="4dp"
        app:layout_constraintLeft_toRightOf="@+id/iv_color_select"
        app:layout_constraintTop_toBottomOf="parent" />

    <ImageButton
        android:id="@+id/ib_hp_add_select"
        android:contentDescription="@string/increment_health"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginLeft="4dp"
        android:layout_marginStart="4dp"
        android:background="@color/transparent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_name_select"
        android:src="@drawable/ic_add_circle_outline_black_36dp"/>
    <ImageButton
        android:id="@+id/ib_hp_minus_select"
        android:contentDescription="@string/decrement_health"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginLeft="4dp"
        android:layout_marginRight="32dp"
        android:layout_marginEnd="32dp"
        android:layout_marginStart="4dp"
        android:background="@color/transparent"
        app:layout_constraintRight_toLeftOf="@id/ib_hp_add_select"
        app:layout_constraintTop_toBottomOf="@id/tv_name_select"
        android:src="@drawable/ic_remove_circle_outline_black_36dp"/>

    <TextView
        android:id="@+id/tv_hp_select"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="18sp"
        app:layout_constraintLeft_toLeftOf="@id/ib_hp_minus_select"
        app:layout_constraintBottom_toBottomOf="@id/tv_name_select" />

    <TextView
        android:id="@+id/tv_init_select"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="16sp"
        android:text="@string/edit_initiative"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="@id/ib_hp_minus_select" />

    <TextView
        android:id="@+id/tv_init_bonus_select"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="16sp"
        android:paddingBottom="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_init_select" />

    <TextView
        android:id="@+id/tv_init_score_select"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="16sp"
        android:paddingLeft="8dp"
        app:layout_constraintLeft_toRightOf="@id/tv_init_bonus_select"
        app:layout_constraintTop_toTopOf="@id/tv_init_bonus_select" />

</android.support.constraint.ConstraintLayout>